--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,7 +1,6 @@
 .nav {
     position: fixed;
     width: 100%;
-    display: flex;
     background-color: #FCFCFC;
     padding: 20px 50px;
     left: 0px;
@@ -16,4 +15,23 @@
 
 .nav i {
 	font-size: 24px;
+}
+
+.nav .nav__list-link {
+	position: relative;
+} 
+
+.nav .nav__badge {
+	position: absolute;
+	top: -8px;
+	right:-7px;
+	font-size: 10px;
+	color: white;
+	background-color: red;
+	width: 18px;
+	height: 18px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
 }
