--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,6 +1,9 @@
 .status-bar {
 	display: flex;
 	justify-content: space-between;
+	background-color: red;
+	width: 100%;
+	height: 20px;
 	margin-bottom: 30px;
 	opacity: 0.7;
 }
