--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,18 @@
+.header-wrapper {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	padding:  5px 0px;
+	background-color: white;
+	box-shadow: 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+
+}
+
 .chats-body {
+	background-image: url("../images/just-waves.png");
 	padding: 10px 0px;
+	padding-top: 100px;
+	 min-height: 1000vh;
 }
 
 .chats-body .header,
@@ -8,15 +21,9 @@
 }
 
 
-.chat-screen {
-	background-image: url("../images/just-waves.png");
-	min-height: 100vh;
-}
-
-.chat__write {
+.chat__write--container {
 	position: fixed;
-	bottom: 50px;
-	width: 80%;
+	bottom: 0;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
@@ -24,30 +31,52 @@
 	justify-content: space-between;
 	-ms-align-items: center;
 	align-items: center;
-	background-color: #fcfcfc;
-	padding: 0px 20px;
+	width: 100%;
+}
+
+.chat__icon-left {
+  position: absolute;
+  left: 10px;
+}
+
+.chat__icon-right {
+  position: absolute;
+  right: 10px;
+}
+
+.chat__write {
+	margin: 0 auto;
+	bottom: 0px;
+	width: 100%;
+	border-radius: 0;
+	padding: 20px 60px;
+	border: none;
+	font-size: 14px;
+	transition: width 0.5s ease-in-out, border-radius 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.chat__write:focus {
+	/*margin은 animation 불가함*/
+	outline:none;
+	width: 80%;
+	transform: translateY(-100px);
 	border-radius: 40px;
 	box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
 }
 
-.chat_write i {
-	font-size: 22px;
+.chat__icon {
+	font-size: 20px;
+	transition: opacity 0.3s ease-in-out;
+}
+
+.chat__write:focus ~ .chat__icon {
+	opacity: 0;
 }
 
 .chat__write-column:nth-child(2) {
 	width: 80%;
 }
 
-.chat__write-column input {
-	padding: 20px 10px;
-	width: 100%;
-	border: none;
-	font-size: 14px;
-}
-
-.chat__write-column input:focus {
-	outline:none;
-}
 
 .chat-screen .chat__messages {
 	border-top: 1px solid #f7f7f7;
