--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -35,3 +35,19 @@
 	align-items: center;
 	border-radius: 50%;
 }
+
+@keyframes showNavBar {
+	from {
+		opacity: 0;
+		transform: translateY(80px);
+	}
+	to {
+		opacity: 1;
+		transform: none;
+	}
+}
+
+.nav {
+	animation: showNavBar 0.5s ease-out forwards;
+	animation-delay: 1s;
+}
