--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,21 @@ a {
 	text-decoration: none;
 }
 
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+	to {
+		opacity: 1;
+		transform: none;
+	}
+}
+
+main {
+	animation: fadeIn 0.6s ease-in-out;
+}
+
 /*.
 	index에 뱃지를 만들고 싶은데 어떻게 하는지 잘 모르겠다..
 	chats .friend__column {
