--- a/css/chat.css
+++ b/css/chat.css
@@ -3,10 +3,8 @@
     z-index: 2;
     top: 0;
     width: 100%;
-    padding: 5px 0px;
     background-color: white;
     box-shadow: 0 18px 36px -18px rgba(0, 0, 0, .3), 0 -12px 36px -8px rgba(0, 0, 0, .025);
-
 }
 
 .chats-body {
@@ -16,9 +14,8 @@
     min-height: 1000vh;
 }
 
-.chats-body .header,
-.chats-body .status-bar {
-    padding: 0px 20px;
+.chats-body .header {
+    padding: 40px 20px 0px 20px;
 }
 
 
