--- a/css/find.css
+++ b/css/find.css
@@ -21,6 +21,7 @@
 
 .find .header-btn__icon {
 	font-size: 12px;
+	cursor: pointer;
 }
 
 .find .find__recommended {
@@ -34,4 +35,3 @@
 	opacity: 0.7;
 	margin-bottom: 15px;
 }
-
