--- a/css/friends.css
+++ b/css/friends.css
@@ -5,6 +5,11 @@
 	border-bottom: 1px solid #F4F4F4;
 }
 
+
+.friends li{
+	margin: 30px 0px;
+}
+
 .friends__plus .friends__title,
 .friends__list .friends__title {
 	font-size: 14px;
