--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,11 +1,17 @@
 .status-bar {
 	display: flex;
 	justify-content: space-between;
-	background-color: red;
+	background-color: white;
 	width: 100%;
 	height: 20px;
 	margin-bottom: 30px;
-	opacity: 0.7;
+	color: gray;
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 35px;
+	padding: 10px 20px;
+	z-index: 4;
 }
 
 .status-bar i {
