--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,10 @@
 
 body {
 	background-color: white;
-	padding: 10px 20px;
+	padding: 40px 20px;
 	color: #141414;
 	font-family: 'Open Sans', sans-serif;
+	height: 120vh;
 }
 
 a {
@@ -43,23 +44,3 @@ a {
 main {
 	animation: fadeIn 0.6s ease-in-out;
 }
-
-/*.
-	index에 뱃지를 만들고 싶은데 어떻게 하는지 잘 모르겠다..
-	chats .friend__column {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.chats .chat__badge {
-	font-size: 10px;
-	color: white;
-	background-color: red;
-	width: 18px;
-	height: 18px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 50%;
-}*/
